# mtpchat_server

./: CMakeLists.txt  README  config.h.in  database
debian/: changelog  config  control  copyright  dirs  docs  init.d.in  install  postinst  rules  templates
help/: alias  channels  logo  motd  mtp  switch  tell  topic  unalias  uptime  users  wall  who
src/: Makefile  channel.c  channel.h  command.c  crypt.c  crypt_win32.c  crypt_win32.h  database.c  database.h  dirent_win32.c  group.c  group.h  list.c  list.h  mtp.c  mtp.h  object.h  server.c  server.h  socket.c  socket.h  token.c  token.h  types.h  user.c  user.h  variable.c  variable.h
