CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH};$ENV{CMAKE_MODULE_PATH}")

INCLUDE(common OPTIONAL)

IF(NOT COMMON_MODULE_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find common.cmake! Please place it in CMakeModules subdirectory, set CMAKE_MODULE_PATH environement variable or set CMAKE_MODULE_PATH parameter to CMake.")
ENDIF(NOT COMMON_MODULE_FOUND)

SET(VERSION_MAJOR 1)
SET(VERSION_MINOR 82)
SET(VERSION_PATCH "REVISION")
SET(AUTHOR "Yogin")
SET(PRODUCT "mtpchat-server")
SET(DESCRIPTION "<Mtp> chat server")
SET(TARGET_ICON "mtpchat.ico")
SET(TARGET "mtpchat-server")
SET(YEAR "2000-2014")

INIT_PROJECT()

PROJECT(${PRODUCT_FIXED} C)

INIT_DEFAULT_OPTIONS()

SET_OPTION_DEFAULT(WITH_EXCEPTIONS OFF)
SET_OPTION_DEFAULT(WITH_RTTI OFF)
SET_OPTION_DEFAULT(WITH_INSTALL_LIBRARIES OFF)

SETUP_DEFAULT_OPTIONS()

IF(APPLE)
  SET(LOG_PREFIX "")
  SET(VAR_LIB_PREFIX "")
ELSEIF(UNIX)
  SET(LOG_PREFIX "/var/log/${TARGET}")
  SET(VAR_LIB_PREFIX "/var/lib/${TARGET}")
ELSE(WIN32)
  SET(LOG_PREFIX "log")
  SET(VAR_LIB_PREFIX ".")
ENDIF()

INIT_BUILD_FLAGS()
SETUP_BUILD_FLAGS()

SETUP_PREFIX_PATHS(${TARGET})
SETUP_EXTERNAL()

GEN_CONFIG_H()
GEN_REVISION_H()

FILE(GLOB SRC src/*.c src/*.h)

SET_TARGET_CONSOLE_EXECUTABLE(${TARGET} ${SRC})
SET_TARGET_LABEL(${TARGET} ${PRODUCT})

IF(WIN32)
  TARGET_LINK_LIBRARIES(${TARGET} Ws2_32)
ELSE()
  TARGET_LINK_LIBRARIES(${TARGET} m crypt)
ENDIF()

# Configration file
INSTALL(FILES database DESTINATION ${ETC_PREFIX})

# Help files are not modified by application
INSTALL(DIRECTORY help DESTINATION ${SHARE_PREFIX})

# Logs files
INSTALL(FILES log/empty DESTINATION ${LOG_PREFIX})

# Files that are created and modified by application
INSTALL(DIRECTORY messages DESTINATION ${VAR_LIB_PREFIX})
